Ensure all rows of the media table are visible, allowing for footer

--- a/src/styles/piaf.scss
+++ b/src/styles/piaf.scss
@@ -6,6 +6,7 @@
 
 nav + div {
     margin-top: 64px;
+    margin-bottom: 80px;
 }
 
 .piaf-media-table {
